feature/implemented DELETE method as a button for each row in list
- TODO: POST method form with validation for each field

--- a/Labos-04/frontend/src/app/components/vozilo/vozilo.component.html
+++ b/Labos-04/frontend/src/app/components/vozilo/vozilo.component.html
@@ -5,8 +5,8 @@
     <td class="list-group-item"> {{ vozilo.vin }}</td>
     <td>
       <button (click) = "onVoziloClick(vozilo.id)" >Details</button>
+      <button (click) = "deleteVozilo(vozilo.id)">Delete</button>
   </td>
-
   </tr>
 </ul>
 
