feature/implemented POST method
- TODO: add Angular Form validation when trying to pass new Vozilo object

--- a/Labos-04/frontend/src/app/components/vozilo-details/vozilo-details.component.html
+++ b/Labos-04/frontend/src/app/components/vozilo-details/vozilo-details.component.html
@@ -4,33 +4,33 @@
     <table>
             <tr>
                 <th>Registration</th>
-                <td> {{ vozilo.registration }} </td>
+                <td> {{ vozilo?.registration }} </td>
 
             </tr>
             <tr>
                 <th>Vehicle Identification Number</th>
-                <td> {{ vozilo.vin}} </td>
+                <td> {{ vozilo?.vin}} </td>
             </tr>
             <tr>
                 <th>Max number of Passengers</th>
-                <td> {{ vozilo.maxNumberOfPassenger}}</td>
+                <td> {{ vozilo?.maxNumberOfPassenger}}</td>
 
             </tr>
             <tr>
                 <th>Shifter</th>
-                <td> {{ vozilo.shifter}}</td>
+                <td> {{ vozilo?.shifter}}</td>
             </tr>
             <tr>
                 <th>A/C</th>
-                <td> {{ vozilo.airConditioning }}</td>
+                <td> {{ vozilo?.airConditioning }}</td>
             </tr>
             <tr>
                 <th>Number of Doors</th>
-                <td> {{ vozilo.numberOfDoors }}</td>
+                <td> {{ vozilo?.numberOfDoors }}</td>
             </tr>
             <tr>
                 <th>Fuel type</th>
-                <td> {{ vozilo.fuelType }}</td>
+                <td> {{ vozilo?.fuelType }}</td>
             </tr>
         <tr>
         </tr>
