feature/Added search by Registration for Vozilo class

--- a/Labos-03/frontend/src/app/components/vozilo/vozilo.component.html
+++ b/Labos-03/frontend/src/app/components/vozilo/vozilo.component.html
@@ -13,3 +13,14 @@
     <li>Mjenjač: {{ selectedVozilo.shifter }}</li>
   </ul>
 </div>
+
+<div>
+  <button (click)="sortVoziloAsc()">Ascending</button>
+  <button (click)="sortVoziloDesc()">Descending</button>
+</div>
+
+<div>
+  <label for="filter">Filter vin: </label>
+  <input id="filter" type="text" #filterValue>
+  <button (click)="filterBy(filterValue)">Filter</button>
+</div>
