--- a/Labos-04/frontend/src/app/components/vozilo/vozilo.component.html
+++ b/Labos-04/frontend/src/app/components/vozilo/vozilo.component.html
@@ -137,4 +137,5 @@
   </form>
 </div>
 
+<button (click)="toNextServiceDate()">Service List</button>
 <button (click)="returnToHome()">Natrag</button>
