--- a/Labos-05/frontend/src/app/components/vozilo/vozilo.component.html
+++ b/Labos-05/frontend/src/app/components/vozilo/vozilo.component.html
@@ -1,6 +1,10 @@
 <h1>Popis vozila</h1>
 <ul class="list-group">
-  <tr *ngFor="let vozilo of vozila" class="list-group-item list-group-item-action">
+
+  <input type="text" placeholder="Filter by registration" #filter>
+  <button type="button" (click)="filterVozilo(filter.value)">Search</button>
+
+  <tr *ngFor="let vozilo of filteredVoziloList" class="list-group-item list-group-item-action">
     <td class="list-group-item text-light bg-primary"> {{ vozilo.registration }}</td>
     <td class="list-group-item"> {{ vozilo.vin }}</td>
     <td>
