fix/fix for class Review to include user_id

--- a/Labos-08/frontend/src/app/components/review-list/review-list.component.html
+++ b/Labos-08/frontend/src/app/components/review-list/review-list.component.html
@@ -8,6 +8,7 @@
       <td class="list-group-item"> {{ review.text }}</td>
       <td class="list-group-item"> {{ review.grade }}</td>
       <td class="list-group-item"> {{ review.vozilo.registration}}</td>
+      <td class="list-group-item"> {{ review.user.username}}</td>
       <td>
         <button (click) = "onReviewClick(review.id)" >Details</button>
         <button (click) = "deleteReview(review.id)">Delete</button>
