--- a/Labos-10/frontend/src/app/home/home.component.html
+++ b/Labos-10/frontend/src/app/home/home.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
-<a routerLink="/vozilo">Lista Vozila</a>
-<a routerLink="/review">Lista Recenzija</a>
+<a routerLink="/vozilo">{{'home.vozilo' | translate}}</a><br>
+<a routerLink="/review">{{ 'home.review' | translate }}</a>
