--- a/Labos-10/frontend/src/app/components/navbar/navbar.component.html
+++ b/Labos-10/frontend/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,17 @@
 <nav class="bg-dark ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a class="flex items-center space-x-3 rtl:space-x-reverse">
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Java web aplikacije</span>
+            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">{{ 'navbar.title' | translate }}</span>
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
             <p class="text-white flex items-center mr-2.5">{{username.toUpperCase()}}</p>
-            <button type="button" (click)="logoutUser()" class="">logout</button>
+            <button type="button" (click)="logoutUser()" class="">{{'navbar.logout' | translate}}</button>
+        </div>
+        <div>
+            <select [(ngModel)]="selectedLanguage" (change)="onLanguageChange()">
+                <option value="hr">{{'navbar.croatian' | translate}}</option>
+                <option value="en">{{'navbar.english' | translate}}</option>
+            </select>            
         </div>
     </div>
 </nav>
